Templates/k8s_service_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: 
  labels:
    app: 
spec:
  ports:  
  - port:
    targetPort:
  selector:
    app: 
  type: 
  loadBalancerIP:
